<resources>
    <string name="app_name">2_FInal_App_OECH</string>
    <string name="onboarding1_mainText1">Quick Delivery At Your \n Doorstep</string>
    <string name="onboaeding1_mainText2">Enjoy quick pick-up and delivery to \n your destination</string>
    <string name="Button_Skip">Skip</string>
    <string name="Button_Next">Next</string>
    <string name="Button_Sign_up">Sign up</string>
    <string name="Onboarding4_mainText1">Flexible Payment</string>
    <string name="Onboarding4_mainText2">Different modes of payment either \n before and after delivery without \n stress</string>
    <string name="Onboarding3_mainText1">Real-time Tracking</string>
    <string name="Onboarding3_mainText2">Track your packages/items from the \n comfort of your home till final destination</string>


    // session 5
    <string name="Search">Search services</string>
</resources>