<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding4">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="21dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding4" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="342dp"
        android:layout_height="146dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Onboarding4_mainText1"
            android:textAlignment="center"
            android:textColor="@color/Primary_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Onboarding4_mainText2"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/Next"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/Primary_color"
        android:text="@string/Button_Next"
        android:textColorLink="@color/Primary_color"
        app:cornerRadius="4.69dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/Skip"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#FDF6FE"
        android:text="@string/Button_Skip"
        android:textColor="@color/Primary_color"
        app:cornerRadius="4.69dp"
        app:iconTint="@color/Primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>