<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding3" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="311dp"
        android:layout_height="096dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="511dp"
        android:layout_marginEnd="39dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Onboarding3_mainText1"
            android:textAlignment="center"
            android:textColor="@color/Primary_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Onboarding3_mainText2"
            android:textAlignment="center"
            android:textColor="@color/Text_color1"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/Next"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="638dp"
        android:layout_marginEnd="27dp"
        android:backgroundTint="@color/Primary_color"
        android:text="@string/Button_Sign_up"
        android:textColorLink="@color/Primary_color"
        app:cornerRadius="4.69dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>